--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,9 +12,9 @@
   <script src="lib/jasmine-3.1.0/boot.js"></script>
 
   <!-- include source files here... -->
- <script src="src/Dublicates.js"></script>
+ <script src="src/shoppingcart.js"></script>
   <!-- include spec files here... -->
-<script src="spec/DublicatesSpec.js"></script>
+<script src="spec/shoppingcartSpec.js"></script>
 
 </head>
 
